argocd/media/arr/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr
        volumeMounts:
        - name: prowlarr-config
          mountPath: /config
        ports:
        - containerPort: 9696

      - name: flaresolverr
        image: flaresolverr/flaresolverr:latest
        ports:
        - containerPort: 8191

      - name: gluetun
        image: ghcr.io/qdm12/gluetun:v3.40.0
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        volumeMounts:
          - name: tun
            mountPath: /dev/net/tun
          - name: mullvad-config-secret
            mountPath: "/gluetun/wireguard"

      volumes:
      - name: prowlarr-config
        persistentVolumeClaim:
          claimName: prowlarr-config
      - name: mullvad-config-secret
        secret:
          secretName: mullvad-config-secret
      - name: tun
        hostPath:
          path: /dev/net/tun
