argocd/media/arr/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9696
  selector:
    app: prowlarr
